--- a/app/components/homepage/nav-bar/template.ejs
+++ b/app/components/homepage/nav-bar/template.ejs
@@ -1,3 +1,5 @@
 <nav id="nav-bar">
-    <div id="header-logo" alt="Logo"></div>
+    <div id="nav-bar-content">
+        <div id="header-logo" alt="Logo"></div>
+    </div>
 </nav>
