--- a/app/components/homepage/header-background/style.scss
+++ b/app/components/homepage/header-background/style.scss
@@ -6,4 +6,10 @@
     height: 100%;
     background: purple;
     z-index: -1;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
