--- a/app/components/homepage/body/template.ejs
+++ b/app/components/homepage/body/template.ejs
@@ -1,4 +1,48 @@
 #include('homepage/header', header)
 
 <main>
+    <section id="chalet">
+        <h1>Le chalet</h1>
+        <div>
+            <p>Ce chalet est drôlement chouette. Ce chalet est drôlement chouette. Ce chalet est drôlement chouette. Ce chalet est drôlement chouette. Ce chalet est drôlement chouette. Ce chalet est drôlement chouette.</p>
+            <p>On y aime la tartiflette. On y aime la tartiflette.</p>
+        </div>
+    </section>
+
+    <section id="rooms">
+        <h1>Les chambres</h1>
+        <div>
+            <p>À faire</p>
+        </div>
+    </section>
+
+    <section id="restaurant">
+        <h1>Le restaurant</h1>
+        <div>
+            <p>À faire</p>
+        </div>
+    </section>
+
+    <section id="summer">
+        <h1>L'été</h1>
+        <div>
+            <p>À faire</p>
+        </div>
+    </section>
+
+    <section id="winter">
+        <h1>L'hiver</h1>
+        <div>
+            <p>À faire</p>
+        </div>
+    </section>
+
+    <section id="infos">
+        <h1>Infos utiles</h1>
+        <div>
+            <p>À faire</p>
+        </div>
+    </section>
 </main>
+
+#include('homepage/footer', footer)
