--- a/app/components/homepage/header/style.scss
+++ b/app/components/homepage/header/style.scss
@@ -38,7 +38,6 @@ header {
         left: 0;
         width: 100%;
         height: 100%;
-        padding-top: $top-bar-height;
         box-sizing: border-box;
         display: flex;
         flex-flow: column nowrap;
@@ -52,16 +51,29 @@ header {
     
         #header-title {
             font-size: 48px;
-            color: white;
-            text-shadow: 1px 1px 0px #000000;
             user-select: none;
+            @include common.white-text();
         }
     
         #header-booking {
-            background: red;
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: stretch;
+            overflow: hidden;
+            background: white;
             width: 512px;
             height: 320px;
             margin: 32px;
+            border-radius: 12px;
+            box-shadow: 0px 10px 10px 5px rgb(0 0 0 / 20%);
+        }
+
+        #booking-header {
+            line-height: 42px;
+            background: #333;
+            color: white;
+            text-align: center;
+            font-size: 20px;
         }
     }
 }
