--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -59,13 +59,13 @@ nav {
     color: var(--nav-text-color);
     transition: background .1s;
 
-    &.scrolled,
+    body.scrolled &,
     &.expanded {
         --nav-background-color: white;
         --nav-text-color: black;
     }
 
-    &.scrolled {
+    body.scrolled & {
         box-shadow: 0 5px 20px -5px rgb(0 0 0 / 20%);
 
         .navbar-brand {
@@ -227,6 +227,24 @@ nav .navbar-button {
     box-shadow: 0 5px 20px -5px rgb(0 0 0 / 20%);
 }
 
+.opacity-fadein {
+    animation: opacityFadeIn 2s;
+}
+@keyframes opacityFadeIn {
+    0% {
+        opacity: 0;
+        pointer-events: none;
+    }
+    50% {
+        opacity: 0;
+        pointer-events: none;
+    }
+    100% {
+        opacity: 1;
+        pointer-events: all;
+    }
+}
+
 #hero-text {
     position: relative;
     width: fit-content;
@@ -248,6 +266,49 @@ nav .navbar-button {
 
         .lang-item {
             color: white !important;
+        }
+    }
+
+    #hero-text-upper {
+        animation: heroTextUpperKeyframes 1s;
+    }
+    @keyframes heroTextUpperKeyframes {
+        0% {
+            opacity: 0;
+            pointer-events: none;
+        }
+        100% {
+            opacity: 1;
+            pointer-events: all;
+        }
+    }
+
+    #hero-text-middle {
+        animation: heroTextMiddleKeyframes 1s;
+    }
+    @keyframes heroTextMiddleKeyframes {
+        0% {
+            opacity: 0;
+            transform: scale(0.9);
+        }
+        100% {
+            opacity: 1;
+            transform: scale(1);
+        }
+    }
+
+    #hero-text-lower {
+        animation: heroTextLowerKeyframes 1.5s;
+    }
+    @keyframes heroTextLowerKeyframes {
+        0% {
+            opacity: 0;
+        }
+        50% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
         }
     }
 }
